objects/Deliverable__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>The Group assigns the deliverables to a category</description>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering and Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gate Deliverables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing and Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering / Capability Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering / Capability Planning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Process Deliverable Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Review_Criteria__c</fullName>
        <label>Review Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stage_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage Material</label>
        <type>Checkbox</type>
    </fields>
    <label>Process Deliverable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Group__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>Process Deliverable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Deliverable</pluralLabel>
    <recordTypes>
        <fullName>Link</fullName>
        <active>true</active>
        <label>Link</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>